--- a/Dojiwa/src/index.css
+++ b/Dojiwa/src/index.css
@@ -12,14 +12,16 @@
   --color-blue1: #56c3e8;
   --color-blue2: #78dafc;
   --color-orange1: #ff9431;
-  --color-sec2-h2 : #185E75;
-  --color-HomeCardColor : rgba(36, 36, 36, 0.80);
-  --color-sec3-ColorH1: #56C3E8;
-  --font-Montserrat: 'Montserrat', sans-serif;
-  --color-backgroundSec3:linear-gradient(17deg, #31023D 11.9%, #270331 89.08%);
+  --color-sec2-h2: #185e75;
+  --color-HomeCardColor: rgba(36, 36, 36, 0.8);
+  --color-sec3-ColorH1: #56c3e8;
+  --font-Montserrat: "Montserrat", sans-serif;
+  --color-backgroundSec3: linear-gradient(17deg, #31023d 11.9%, #270331 89.08%);
   --color-footerBg: #242424;
-  --color-purple:#470159;
-  --color-gray:rgba(255, 255, 255, 0.60);
+  --color-purple: #470159;
+  --color-gray: rgba(255, 255, 255, 0.6);
+  --spacing-30: 30%;
+  --spacing-70: 70%;
 }
 .gradientColor {
   /* background: radial-gradient(ellipse at 100% -75%, rgba(86, 195, 232, 1) 0%, rgba(120, 218, 252, 1) 62%, rgba(255, 148, 49, 1) 100% ); */
@@ -39,7 +41,6 @@
   -webkit-text-fill-color: transparent;
 }
 
-
 .montserrat-gradientColor {
   font-family: "Montserrat";
   font-optical-sizing: auto;
@@ -56,7 +57,12 @@
 }
 
 #GradientColor {
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), linear-gradient(201deg, #050505 1.11%, #4D0061 127.97%);
+  background: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.2) 0%,
+      rgba(0, 0, 0, 0.2) 100%
+    ),
+    linear-gradient(201deg, #050505 1.11%, #4d0061 127.97%);
 }
 
 @keyframes flipMagnify {
@@ -74,8 +80,8 @@
 /* Apply styles to the image */
 .image-flip {
   height: 56px; /* same as h-14 */
-  width: 56px;  /* same as w-14 */
-  transition: transform 2.25s ease ;
+  width: 56px; /* same as w-14 */
+  transition: transform 2.25s ease;
 }
 
 /* .image-flip:hover {
@@ -86,15 +92,29 @@
   animation: flipMagnify 1.25s ease forwards;
 }
 
-.CardGradient:hover{
-  background: linear-gradient(135deg, #6E428F 4.02%, rgba(119, 133, 217, 0.60) 150.26%), radial-gradient(70.71% 70.71% at 50% 50%, rgba(0, 100, 224, 0.25) 0%, rgba(71, 117, 255, 0.00) 100%), radial-gradient(70.71% 70.71% at 50% 50%, rgba(255, 255, 255, 0.44) 0%, rgba(255, 255, 255, 0.00) 100%), #6E428F;
+.CardGradient:hover {
+  background: linear-gradient(
+      135deg,
+      #6e428f 4.02%,
+      rgba(119, 133, 217, 0.6) 150.26%
+    ),
+    radial-gradient(
+      70.71% 70.71% at 50% 50%,
+      rgba(0, 100, 224, 0.25) 0%,
+      rgba(71, 117, 255, 0) 100%
+    ),
+    radial-gradient(
+      70.71% 70.71% at 50% 50%,
+      rgba(255, 255, 255, 0.44) 0%,
+      rgba(255, 255, 255, 0) 100%
+    ),
+    #6e428f;
   /* transition: ease-in-out ;
 transition-delay: 10s;
   cursor: pointer; */
 }
-.section4End{
-
-  background: linear-gradient(72deg, #050505 -44.85%, #4D0061 107.36%);
+.section4End {
+  background: linear-gradient(72deg, #050505 -44.85%, #4d0061 107.36%);
 }
 
 /* About page */
@@ -113,6 +133,65 @@ transition-delay: 10s;
 
   -webkit-text-fill-color: transparent;
 }
-.gradient2{
-  background: linear-gradient(201deg, #050505 -54.79%, #4D0061 94.43%);
+.gradient2 {
+  background: linear-gradient(201deg, #050505 -54.79%, #4d0061 94.43%);
+}
+/* .ToolbarWrapper-sc-cif21b-6 {
+  display: none !important;
+} */
+.cjKgXF::after {
+  display: none;
+}
+
+.ghEwJL {
+  height: fit-content !important;
+}
+
+.iWvZQG {
+  border-radius: 18px !important;
+  padding-top: 5px !important;
+  padding-bottom: 5px !important;
+  padding-right: 30px !important;
+  padding-left: 30px !important;
+  font-size: 25px !important;
+  margin-top: 8px !important;
+  color: white !important;
+  font-weight: 900 !important;
+  opacity: 0.75 !important;
+  border: 1px solid #edd2f7 !important;
+}
+.iWvZQG.active {
+  background: #edd2f7 !important;
+  border-radius: 18px !important;
+  padding-top: 5px !important;
+  padding-bottom: 5px !important;
+  padding-right: 30px !important;
+  padding-left: 30px !important;
+  font-size: 25px !important;
+  margin-top: 8px !important;
+  color: black !important;
+  font-weight: 900 !important;
+  opacity: 0.75 !important;
+}
+.FcbZI {
+  background: #ff9431 !important;
+}
+
+.dIEUAi{
+  justify-content: center !important;
+  background: none !important;
+  padding: 0 !important;
+}
+
+.dztRIt.horizontal {
+  margin-left: 80px;
+}
+.iNqoWz{
+display: none !important;
+}
+.hUueyT{
+display: none !important; 
+}
+.drpPNI{
+  display: none !important;
 }
